// Vitest Snapshot v1

exports[`Jumper > :props > :disabled 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__prev"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__current"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__next"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :disabled, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :disabled, false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__prev"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__current"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__next"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :disabled:current, current false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__current"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :disabled:next, next false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__next"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :disabled:prev, prev false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled t-button--shape-square t-button--icon-only t-jumper__prev"
    disabled=""
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :layout:horizontal, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :layout:vertical 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-up"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-down"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent, false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <!---->
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent, with false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <!---->
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent:default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent:false 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <!---->
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :showCurrent:true, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :size:large 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-l t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-l t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-l t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :size:medium 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :size:medium, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :size:small 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-s t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-s t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-s t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :variant, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :variant:outline 1`] = `
<div
  class="t-jumper t-jumper--outline"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;

exports[`Jumper > :props > :variant:text, default 1`] = `
<div
  class="t-jumper"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__prev"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-left"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__current"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-round"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 11.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7zM8 13A5 5 0 108 3a5 5 0 000 10z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square t-button--icon-only t-jumper__next"
    type="button"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </button>
</div>
`;
